--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,20 +1,8 @@
 {
+  "extends": "../../packages/typescript-config/base.json",
   "compilerOptions": {
-    "module": "commonjs",
-    "strictNullChecks": true,
-    "strictPropertyInitialization": false,
-    "declaration": true,
-    "removeComments": true,
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
-    "allowSyntheticDefaultImports": true,
-    "target": "ES2021",
-    "sourceMap": true,
     "outDir": "./dist",
     "baseUrl": ".",
-    "moduleResolution": "node",
-    "incremental": false,
-    "skipLibCheck": true,
     "paths": {
       "@account/*": ["src/account/*"],
       "@shared/*": ["src/shared/*"],
