feat: add docker to rabbitmq

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,47 @@
-version: "3.5"
+version: '3.5'
 
 services:
+  rabbitmq:
+    image: rabbitmq:4.0-management-alpine
+    container_name: rabbitmq
+    ports:
+      - '5672:5672' # RabbitMQ broker port
+      - '15672:15672' # RabbitMQ management console
+    environment:
+      RABBITMQ_DEFAULT_USER: guest
+      RABBITMQ_DEFAULT_PASS: guest
+      RABBITMQ_DEFAULT_VHOST: /
+    volumes:
+      - .docker/rabbitmq/rabbitmq.config:/etc/rabbitmq/rabbitmq.config:ro
+      - ./.docker/rabbitmq/definitions.json:/etc/rabbitmq/definitons.json:ro
+  # databaseevents:
+  #   container_name: databaseevents
+  #   image: postgres:14
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #     PGDATA: /data/postgres
+  #   volumes:
+  #     - .docker/db/:/data/postgres
+  #   ports:
+  #     - '5432:5432'
+  #   networks:
+  #     - postgres
+
+  # databaseeventstest:
+  #   container_name: databaseeventstest
+  #   image: postgres:14
+  #   environment:
+  #     POSTGRES_USER: postgres
+  #     POSTGRES_PASSWORD: postgres
+  #     PGDATA: /data/postgres
+  #   volumes:
+  #     - .docker/testdb/:/data/postgres
+  #   ports:
+  #     - '5433:5432'
+  #   networks:
+  #     - postgres
+
   databaseapi:
     container_name: databaseapi
     image: postgres:14
@@ -11,7 +52,7 @@ services:
     volumes:
       - .docker/db/:/data/postgres
     ports:
-      - "5432:5432"
+      - '5432:5432'
     networks:
       - postgres
 
@@ -25,7 +66,7 @@ services:
     volumes:
       - .docker/testdb/:/data/postgres
     ports:
-      - "5433:5432"
+      - '5433:5432'
     networks:
       - postgres
 
