--- a/apps/api/.env.test.example
+++ b/apps/api/.env.test.example
@@ -5,3 +5,7 @@ DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
 DB_LOGGING=false
+RABBITMQ_HOST=localhost
+RABBITMQ_PORT=5672
+RABBITMQ_USER=guest
+RABBITMQ_PASSWORD=guest
