feat: save all operations to history of api

--- a/apps/events/package.json
+++ b/apps/events/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "events",
+  "name": "events-api",
   "version": "0.0.1",
   "description": "",
   "author": "",
@@ -19,7 +19,7 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "model:generate": "npx typeorm-model-generator -h localhost -d postgres -u postgres -x postgres -e postgres",
+    "model:generate": "npx typeorm-model-generator -h localhost -d postgres -u postgres -x postgres -e postgres -p 5434",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/shared/infra/database/config.ts",
     "migration:run": "yarn typeorm migration:run",
     "migration:revert": "yarn typeorm migration:revert"
