--- a/.gitignore
+++ b/.gitignore
@@ -42,5 +42,5 @@ yarn-error.log*
 
 .docker/db/
 .docker/testdb/
-.docker/eventsdb/
-.docker/eventsdbtest/
+.docker/dbevents/
+.docker/testdbevents/
