--- a/apps/events/.env.example
+++ b/apps/events/.env.example
@@ -1,6 +1,7 @@
 PORT=3001
 DB_HOST=localhost
-DB_PORT=5432
+DB_NAME=postgres
+DB_PORT=5434
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
