--- a/apps/events/package.json
+++ b/apps/events/package.json
@@ -14,14 +14,14 @@
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "pretest": "NODE_ENV=test yarn migration:run",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "model:generate": "npx typeorm-model-generator -h localhost -d postgres -u postgres -x postgres -e postgres -p 5434",
-    "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js -d src/shared/infra/database/config.ts",
-    "migration:run11": "yarn typeorm migration:run",
+    "typeorm": "ts-node-dev -r tsconfig-paths/register ../../node_modules/typeorm/cli.js -d src/common/infra/database/config.ts",
+    "migration:run": "yarn typeorm migration:run",
     "migration:revert": "yarn typeorm migration:revert"
   },
   "dependencies": {
