--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "build": "turbo build",
     "dev": "turbo dev",
     "lint": "turbo lint",
-    "format": "prettier --write \"**/*.{ts,tsx,md}\""
+    "format": "prettier --write \"**/*.{ts,tsx,md}\"",
+    "test:cov": "turbo test:cov"
   },
   "devDependencies": {
     "prettier": "^3.2.5",
