--- a/apps/events/package.json
+++ b/apps/events/package.json
@@ -17,6 +17,7 @@
     "pretest": "NODE_ENV=test yarn migration:run",
     "test": "jest",
     "test:watch": "jest --watch",
+    "test:cov": "yarn test --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
     "model:generate": "npx typeorm-model-generator -h localhost -d postgres -u postgres -x postgres -e postgres -p 5434",
