--- a/apps/events/tsconfig.json
+++ b/apps/events/tsconfig.json
@@ -8,7 +8,8 @@
       "@common/*": ["src/common/*"],
       "@src/*": ["src/*"],
       "@test/*": ["test/*"]
-    }
+    },
+    "allowJs": true
   },
   "exclude": ["node_modules", ".build", ".eslintrc.js", "dist"],
   "include": ["src", "test"]
