chore: dockerized application

--- a/apps/api/.env.local.example
+++ b/apps/api/.env.local.example
@@ -1,11 +1,12 @@
-PORT=3001
-DB_HOST=localhost
+PORT=3000
+DB_HOST=database-api
+DB_NAME=postgres
 DB_PORT=5432
 DB_USER=postgres
 DB_PASSWORD=postgres
 DB_DATABASE=postgres
 DB_LOGGING=false
-RABBITMQ_HOST=localhost
+RABBITMQ_HOST=rabbitmq
 RABBITMQ_PORT=5672
 RABBITMQ_USER=guest
 RABBITMQ_PASSWORD=guest
