--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -14,4 +14,4 @@ RUN yarn install
 RUN yarn build
 
 # Run application
-CMD ["node", "apps/api/dist/main.js"]
+CMD ["sh", "-c", "yarn migration:run && node apps/api/dist/main.js"]
